trying to fix CSS pathing issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     </section>
 <body>
 
-<script src="{{ site.base_url }}/assets/js/script.js">
+<script src="{{ '/assets/js/script.js' | relative_url }}">
 </script>
 
 </html>
