--- a/_includes/page2header.html
+++ b/_includes/page2header.html
@@ -1,7 +1,7 @@
 <div class="page2-header">
     <div class="table">
         <div class="cell column-one">
-            <img src="{{ site.base_url }}/assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="page2-headshot">
+            <img src="{{ '/assets/images/tomdemayheadshot.jpg' | relative_url }}" alt="Tom DeMay Headshot" class="page2-headshot">
         </div>
         <div class="cell column-two">
             {% include headercontent.html %}
