don't know why relative path isn't working for leftpane.html. So I'm going to try not using it

--- a/_includes/leftpane.html
+++ b/_includes/leftpane.html
@@ -1,5 +1,5 @@
 <div class="left-pane">
-    <img src="{{ '/assets/images/tomdemayheadshot.jpg' | relative_url }}" alt="Tom DeMay Headshot" class="headshot">
+    <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot">
     <div class="links">
         <a href="https://www.linkedin.com/in/demaytom/" target="_blank">LinkedIn <i class="fas fa-external-link-alt fa-xs"></i></a><br>
         <a href="https://github.com/tomdemay" target="_blank">GitHub <i class="fas fa-external-link-alt fa-xs"></i></a><br>
