breaking things up in smaller pieces and adding an employmenthistory page that I can copy and paste into word then save to a text file so I can copy sections into linkedin.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <div class="stacked-container">
 
             {% if page.enable_cover_letter %}
-                {% include coverletter.html %}
+                {% include resume/coverletter.html %}
             {% else %}
                 <div class="headercontent">
                     {% include headercontent.html %}
