--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -149,6 +149,7 @@ nav {
     width: 100px;
     height: 120px;
     padding: 10px 10px 10px 20px;
+    user-select: none;
 }
 
 .cover-letter {
@@ -278,6 +279,7 @@ details > div {
 
 .soundcloudplaylist {
     padding-right: 10px;
+    user-select: none;
 }
 
 .content {
@@ -289,6 +291,7 @@ details > div {
 }
 
 footer {
+    user-select: none;
     background-color: #666;
     color: #fff;
     bottom: 0;
@@ -374,6 +377,7 @@ footer a:hover {
     grid-gap: 20px;
     margin: 10px 10px 10px 0;
 }
+
 
 @media (min-width: 901px) {
     .projects-list {
