adding my obfuscated contact information

--- a/_includes/headercontent.html
+++ b/_includes/headercontent.html
@@ -2,6 +2,9 @@
     <h1>Thomas J. DeMay, II</h1>
     <h2>Principal Software Engineer</h2>
     <a href="https://www.tomdemay.pro/" target="_blank">https://www.tomdemay.pro/<i class="fas fa-external-link-alt fa-xs"></i></a><br>
+    {% if site.localhost %}
+    {{ "YmRwQIzC5NrQ3urmykCG3urk6FhApujK4NDK3Obe3ECsgkBkZGxqbHjE5Hx4wkDQ5MrMek7awtLY6N50yMrawvJc6N7agM7awtLYXMbe2k5A6MLkzsroek6+xNjC3NZOfMjK2sLyXOje2oDO2sLS2FzG3tp4XsJ8WEBuYGZaZHBmWm5yaGo=" | deobfuscatefilter }}
+    {% endif %}
 </div>
 <div class="links">
     <div class="table">
