changes file structure and made all links appear in primary color when printing

--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -1,6 +1,6 @@
 <div id="coverletter" class="cover-letter">
     <div class="headercontent">
-        {% include headercontent.html %}
+        {% include_relative _includes/sitelayout/headercontent.html %}
     </div>
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
