--- a/_includes/sitelayout/page2header.html
+++ b/_includes/sitelayout/page2header.html
@@ -4,7 +4,7 @@
             <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="page2-headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
         </div>
         <div class="cell column-two">
-            {% include headercontent.html %}
+            {% include sitelayout/headercontent.html %}
         </div>
         <div class="cell column-three">
         </div>
