Supporting changing page title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="{{ "/assets/css/screen-styles.css" | relative_url }}" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">    
     <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+    <script>
+        function updateTitle() {
+            var checkbox = document.getElementById('show-cover-letter-checkbox');            
+            var pageTitle = document.getElementsByTagName('title')[0];
+            if (checkbox.checked) {
+                pageTitle.innerText = "{{ site.title }} - {{ site.cv-title }}";
+            } else {
+                pageTitle.innerText = "{{ site.title }} - {{ page.title }}";
+            }
+        }
+    </script>
 </head>
 
 <body>
