Wrote a script that will start jekyll server and startup chrome and export both PDFs

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -24,6 +24,6 @@
         <li>CruiseControl, Jenkins</li>
         <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
         <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
-        <li>Jekyll, Liquid</li>
+        <li>Jekyll, Liquid, Selenium</li>
     </ul>
 </details>
