Adding an About This Site page

--- a/_includes/sitelayout/sitenavigation.html
+++ b/_includes/sitelayout/sitenavigation.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">About Me</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
+        <li><a href="aboutthissite.html">About Site</a></li>
         {% if page.enable_cover_letter %}
         <li>
             <input type="checkbox" id="show-cover-letter-checkbox">
