--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -57,6 +57,25 @@ nav {
     user-select: none;
 }
 
+.code-snippet {
+    padding: 10px;
+    font-family: 'Courier New', monospace;
+    font-size: 14px;
+  }
+  
+  .code-snippet pre {
+    padding: 10px;
+    border-radius: 4px;
+    color: #000;
+    white-space: pre-wrap;
+    overflow-x: auto;
+    background-color: #ccc;
+  }
+
+ .code-snippet pre code {
+    display: block;
+  }
+
 #show-cover-letter-checkbox {
     display: none;
 }
@@ -79,6 +98,9 @@ nav {
 
 .logo-short {
     display: none;
+    font-size: 24px;
+    color: #fff;
+    font-weight: bold;
 }
 
 .navigation {
@@ -503,6 +525,7 @@ footer a:hover {
 
     .content > .stacked-container {
         display: grid;
+        flex: 1;
     }
 
     .left-pane,
@@ -586,20 +609,25 @@ footer a:hover {
     }
 }
 
-@media screen and (max-width: 775px) {
+@media screen and (max-width: 875px) {
     .logo-full {
         display: none;
     }
 
     .logo-short {
         display: initial;
-        font-size: 24px;
-        color: #fff;
-        font-weight: bold;
     }
 }
 
-@media screen and (max-width: 675px) {
+@media screen and (max-width: 775px) {
+    .logo-full {
+        display: initial;
+    }
+
+    .logo-short {
+        display: none;
+    }
+
     .toggle-nav-label {
         display: flex;
         align-items: center;
@@ -649,3 +677,16 @@ footer a:hover {
         margin: 10px 0;
     }
 }
+
+@media screen and (max-width: 350px) {
+    .logo-full {
+        display: none;
+    }
+
+    .logo-short {
+        display: initial;
+    }
+}
+
+
+
