--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -49,7 +49,7 @@
             my passion for software engineering and for learning. I am open to any kind of development. Above 
             all, I like being creative, collaborating with others and learning, which I believe would to be a 
             tremendous asset to your organization.</p>
-        <p>Thank you for your time and your consideration. Sincerly,</p>
+        <p>Thank you for your time and your consideration. Sincerely,</p>
         <br/>
         Tom DeMay
         <hr class="page-break"/>
