--- a/_includes/aboutsite/jekyllliquid.html
+++ b/_includes/aboutsite/jekyllliquid.html
@@ -2,7 +2,7 @@
     <summary>Jekyll and Liquid</summary>
     <p>Jekyll generates static HTML files during the build process. 
         Jekyll uses the "Liquid" templating language to create reusable
-        templates for this stie's layout and structure. With Liquid, you 
+        templates for this sites layout and structure. With Liquid, you 
         can include variables, conditionals, loops, and other logic to 
         dynamically generate content. </p>
     <p>GitHub only serves static web pages. Initially I had to copy elements
