--- a/_includes/aboutsite/ruby.html
+++ b/_includes/aboutsite/ruby.html
@@ -1,7 +1,7 @@
 <details id="ruby">
     <summary>Ruby</summary>
     <p>Jekyll supports Ruby scripts in the build process. I have obfuscated my 
-        contact information in the Liquid templates files commited to my repository 
+        contact information in the Liquid templates files committed to my repository 
         so web crawlers won't pick it up. This information is excluded from the 
         generated HTML when viewing the site online. But when I run this site on 
         my Jekyll installation on my local machine Jekyll runs my Ruby scripts 
