--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -25,7 +25,7 @@
         in just one year while maintaining a GPA of 4.0. In 2003, I embarked on building <a
             href="https://www.discountcasinogear.com/" target="_blank">Discount Casino Gear
             <i class="fas fa-external-link-alt fa-xs"></i></a> as an experimental project to
-        learn how to build web sites, which eventually became one of the leading sites in its
+        learn how to build websites, which eventually became one of the leading sites in its
         industry, consistently generating annual revenue in the range of half a million dollars
         until I successfully sold it for a profit in 2011. The site, still operational, proudly
         asserts its status as the largest supplier of gaming equipment, outlasting many of its
@@ -41,7 +41,7 @@
     <p> As evident from my journey, I possess an unwavering commitment to continuous education.
         I have taught myself a multitude of technologies, including C/C++, .NET, C#, Windows and
         Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular Expressions, classic ASP,
-        HTML/CSS, SQL and No-SQL databases, and cloud computing, to name a few. Currently, I am
+        HTML/CSS, SQL and NoSQL databases, and cloud computing, to name a few. Currently, I am
         actively honing my skills in front-end web development using Java Spring, Spring Boot,
         Angular, React.js, MVC, and LAMP stacks. I am also working towards attaining my AWS and
         Azure certifications, with future plans to delve into machine learning and AI. </p>
