--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -39,7 +39,7 @@
                 was refactored to complete in 6 minutes using only 40MB of memory. </p>
         <p>As you can see, I am an aggressive learner and have a passion for continued education. I have taught 
             myself C/C++, .NET, C#, Windows and Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular 
-            Expressions, classic ASP, HTML/CSS, Web site development, SQL and No-SQL, various back end databases, 
+            Expressions, classic ASP, HTML/CSS, Website development, SQL and NoSQL, various back end databases, 
             and cloud computing just to name a few. I am currently working on mastering front-end web development 
             using Java Spring, Spring Boot, Angular, React.js, MVC and LAMP stacks and working towards my AWS and 
             Azure certifications, then I plan to move on to machine learning and AI.</p>
