--- a/_includes/resume/employmenthistory.html
+++ b/_includes/resume/employmenthistory.html
@@ -58,9 +58,9 @@
                 </li>
             </ul>
         </details>
-        <details> <a name="assessments"></a> <a name="skillsassessments"></a>
-            <summary id="skillsassessments"> <span class="left"><strong>Skills
-                        Assessments</strong></span> <span class="right">Ashburn, Virginia</span><br>
+        <details> <a name="assessment"></a> <a name="skillsassessment"></a>
+            <summary id="skillsassessment"> <span class="left"><strong>Skills
+                        Assessment</strong></span> <span class="right">Ashburn, Virginia</span><br>
                 November 2019 - January 2020 </summary>
             <p>In November 2019, GigaTrust unfortunately went bankrupt, leading to the closure
                 of its operations. After nearly 11 years with GigaTrust and 12 years with EMC, I
@@ -70,7 +70,7 @@
             <p>I dedicated my efforts to studying <strong>cloud computing</strong> and
                 <strong>full-stack web development</strong>. Additionally, I refreshed my
                 knowledge of <strong>Python</strong>, <strong>C++ 2.0</strong>, <strong>Java
-                    (including Spring and SpringBoot)</strong>, <strong>.NET</strong>,
+                    (including Spring and Spring Boot)</strong>, <strong>.NET</strong>,
                 <strong>REST</strong>, <strong>JPA</strong>, <strong>Hibernate</strong>,
                 <strong>HTML</strong>, <strong>CSS</strong>, and <strong>Angular</strong>. These
                 efforts allowed me to stay up to date with the latest industry trends and expand
@@ -117,8 +117,8 @@
                 <li>Reorganized the code base into separate manageable libraries and services and established a 
                     <strong>source control</strong> branching model using <strong>SVN</strong>.
                     Implemented <strong>continuous integration</strong> with
-                    <strong>CruiseControl</strong> through <strong>automation</strong> with <strong>NAnt</strong>,
-                    <strong>bash</strong>, and <strong>PowerShell scripts</strong>. CruiseControl was later ported to 
+                    <strong>CruiseControl.NET</strong> through <strong>automation</strong> with <strong>NAnt</strong>,
+                    <strong>bash</strong>, and <strong>PowerShell scripts</strong>. CruiseControl.NET was later ported to 
                     <strong>Jenkins</strong> and <strong>SVN</strong> was replaced with <strong>Git</strong>.
                     <ul>
                         <li>These code improvements dramatically improved maintainability and support
