--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -9,7 +9,7 @@
         <li>Spring, Spring Boot</li>
         <li>Rest, JPA, Hibernate</li>
         <li>Agile/Scrum, Jira, Redmine</li>
-        <li>SQL, No-SQL</li>
+        <li>SQL, NoSQL</li>
         <li>HTML, CSS, Angular</li>
         <li>AWS EC2, Azure Information Protection</li>
         <li>Visual Studio, IntelliJ, Eclipse, Brackets, VS Code</li>
@@ -21,7 +21,7 @@
         <li>Microsoft Detours/Windows Hooking</li>
         <li>Digital Rights Management (DRM/ADRMS)</li>
         <li>SVN, ClearCase, git, BitBucket</li>
-        <li>CruiseControl, Jenkins</li>
+        <li>CruiseControl.NET, Jenkins</li>
         <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
         <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
         <li>Jekyll, Liquid, Selenium</li>
