--- a/_includes/resume/hobbies.html
+++ b/_includes/resume/hobbies.html
@@ -8,7 +8,7 @@
         <li>Private Pilot</li>
         <li>Football</li>
         <li>Snow Skiing</li>
-        <li>Coaching Kid's Sports</li>
+        <li>Coaching Kid Sports</li>
         <li>Poker</li>
         <li>Musical Performing</li>
         <li>Piano, Organ, Keyboards</li>
@@ -16,6 +16,6 @@
         <li>Harmonica</li>
         <li>Banjo</li>
         <li>Strength Training</li>
-        <li>Wood Working, Handy Man</li>
+        <li>Woodworking, Handyman</li>
     </ul>
 </details>
