--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -9,7 +9,7 @@
         <br><br>
         <h3>Top Skills:</h3>
         <ul>
-            <li><a href="#professionalskills">C/C++ 2.0 (since mid 90s)</a></li>
+            <li><a href="#professionalskills">C/C++ 2.0<br>(C/C++ since mid 90s)</a></li>
             <li><a href="#professionalskills">C# (since early 2000s)</a></li>
             <li><a href="#professionalskills">Python (since mid 2010s)</a></li>
             <li><a href="#professionalskills">Java (since late 2000s)</a></li>
