Adding Rust to my Resume

--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -1,15 +1,21 @@
 <div class="left-pane">
-    <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
+    <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot"
+        class="headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
     <div class="links">
-        <a href="https://www.linkedin.com/in/demaytom/" target="_blank">LinkedIn <i class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://github.com/tomdemay" target="_blank">GitHub <i class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://stackoverflow.com/users/1932930/tdemay" target="_blank">Stack Overflow <i class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://www.linkedin.com/in/demaytom/details/recommendations/" target="_blank">Recommendations <i class="fas fa-external-link-alt fa-xs"></i></a><br>
-        <a href="https://soundcloud.com/tom-demay/sets/featured-tracks" target="_blank">SoundCloud <i class="fas fa-external-link-alt fa-xs"></i></a>
+        <a href="https://www.linkedin.com/in/demaytom/" target="_blank">LinkedIn <i
+                class="fas fa-external-link-alt fa-xs"></i></a><br>
+        <a href="https://github.com/tomdemay" target="_blank">GitHub <i
+                class="fas fa-external-link-alt fa-xs"></i></a><br>
+        <a href="https://stackoverflow.com/users/1932930/tdemay" target="_blank">Stack Overflow <i
+                class="fas fa-external-link-alt fa-xs"></i></a><br>
+        <a href="https://www.linkedin.com/in/demaytom/details/recommendations/" target="_blank">Recommendations <i
+                class="fas fa-external-link-alt fa-xs"></i></a><br>
+        <a href="https://soundcloud.com/tom-demay/sets/featured-tracks" target="_blank">SoundCloud <i
+                class="fas fa-external-link-alt fa-xs"></i></a>
         <br><br>
         <h3>Top Skills:</h3>
         <ul>
-            <li><a href="#professionalskills">C/C++ 2.0<br>(C/C++ since mid 90s)</a></li>
+            <li><a href="#professionalskills">C/C++ 2.0, Rust<br>(C/C++ since mid 90s)</a></li>
             <li><a href="#professionalskills">C# (since early 2000s)</a></li>
             <li><a href="#professionalskills">Python (since mid 2010s)</a></li>
             <li><a href="#professionalskills">Java (since late 2000s)</a></li>
@@ -20,5 +26,5 @@
             <li><a href="#professionalskills">HTML (since late 90s)</a></li>
             <li><a href="#professionalskills">SQL (since mid 90s)</a></li>
         </ul>
-    </div>                
+    </div>
 </div>
