--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,7 +1,7 @@
 <details open> <a name="professional"></a>
     <summary id="professionalskills">Professional Skills</summary>
     <ul class="skills-list">
-        <li>C/C++ 2.0, Java</li>
+        <li>C/C++ 2.0, Rust, Java</li>
         <li>C#, .NET</li>
         <li>Windows and Linux Platforms</li>
         <li>Python, PowerShell, bash, Ruby</li>
