Adding golang, react, bootstrap, java and typescript and working with react and go (golang) udemy course.

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -1,28 +1,42 @@
 <details id="education">
     <summary>Education</summary>
     <ul class="two-column-list">
-        <li> 
+        <li>
             <span class="left">
                 Post Graduate Program in Cloud Computing<br>
                 University of Texas at Austin<br>
                 Texas McCombs School of Business<br>
                 Currently enrolled to fill in the few remaining gaps in my existing AWS knowledge.<br>
-                The expectation is to obtain <strong>AWS</strong> and <strong>Azure certifications</strong> and get exposure to other 
-                cloud providers such as <strong>Google and IBM</strong>.<br>
-                Current GPA 4.33
-            </span> 
-            <span class="right">March 2023 - Present</span> 
+                The expectation is to obtain <strong>AWS</strong> and <strong>Azure certifications</strong> and get
+                exposure to other cloud providers such as <strong>Google and IBM</strong>.<br>
+                4.2 GPA
+            </span>
+            <span class="right">March 2023 - October 2023</span>
         </li>
         <li>
             <span class="left">
                 Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA & Hibernate<br>
-                <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/" class="link-with-indicator">
+                <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
+                    class="link-with-indicator">
                     udemy.com/course/spring-hibernate-tutorial/
                     <i class="fas fa-external-link-alt fa-xs"></i>
                 </a>
             </span>
             <span class="right">
                 Present
+            </span>
+        </li>
+        <li>
+            <span class="left">
+                Working with React and Go (Golang)<br>
+                <a target="_blank" href="https://www.udemy.com/course/working-with-react-and-go-golang/"
+                    class="link-with-indicator">
+                    udemy.com/course/working-with-react-and-go-golang/
+                    <i class="fas fa-external-link-alt fa-xs"></i>
+                </a>
+            </span>
+            <span class="right">
+                October, 2023
             </span>
         </li>
         <li>
@@ -52,7 +66,8 @@
         <li>
             <span class="left">
                 Create web app with Angular 12, .NET Core Web API & Mongo DB<br>
-                <a target="_blank" href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
+                <a target="_blank"
+                    href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
                     udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db/
                     <i class="fas fa-external-link-alt fa-xs"></i>
                 </a>
@@ -61,13 +76,14 @@
                 March, 2023
             </span>
         </li>
-        <li> 
+        <li>
             <span class="left">
                 Strayer University<br>
-                <i>Completed 4 years of college in one year by teaching myself the material and testing out of classes.</i><br>
+                <i>Completed 4 years of college in one year by teaching myself the material and testing out of
+                    classes.</i><br>
                 Summa Cum Laude (4.0 GPA)<br>
-            </span> 
-            <span class="right">March 1998 - March 1999</span> 
+            </span>
+            <span class="right">March 1998 - March 1999</span>
         </li>
     </ul>
 </details>
