--- a/_includes/resume/publications.html
+++ b/_includes/resume/publications.html
@@ -1,21 +1,22 @@
-<details id="publications">
-    <summary>Publications</summary>
-    <ul class="two-column-list">
-        <li> <span class="left">Speed Up Client-Server Applications with Server Side Cursors
-                (Part Two)</span> <span class="right">September, 1999</span> </li>
-        <li> <span class="left">Client-Server Development in the Real World (Two Part
-                Series)</span> <span class="right">May, 1999</span> </li>
-        <li> <span class="left">Put Microsoft Graph to Work in Your Applications</span> <span
-                class="right">May, 1997</span> </li>
-        <li> <span class="left">Understanding the Composite Class Hierarchy</span> <span
-                class="right">March, 1997</span> </li>
-        <li> <span class="left">Use Visual FoxPro to Send and Receive E-Mail and Faxes (Part
-                Two)</span> <span class="right">January, 1997</span> </li>
-        <li> <span class="left">Use FoxPro to Send E-Mail Messages (Two Part Series, Cover
-                Article)</span> <span class="right">December, 1997</span> </li>
-        <li> <span class="left">Get the Most Up-To-Date Data with DDE Advise</span> <span
-                class="right">August, 1996</span> </li>
-        <li> <span class="left">Run Applications by Remote Control</span> <span
-                class="right">May, 1996</span> </li>
-    </ul>
-</details>
+<div class="no-page-break">
+    <details id="publications">
+        <summary>Publications</summary>
+        <ul class="two-column-list">
+            <li> <span class="left">Speed Up Client-Server Applications with Server Side Cursors
+                    (Part Two)</span> <span class="right">September, 1999</span> </li>
+            <li> <span class="left">Client-Server Development in the Real World (Two Part
+                    Series)</span> <span class="right">May, 1999</span> </li>
+            <li> <span class="left">Put Microsoft Graph to Work in Your Applications</span> <span class="right">May,
+                    1997</span> </li>
+            <li> <span class="left">Understanding the Composite Class Hierarchy</span> <span class="right">March,
+                    1997</span> </li>
+            <li> <span class="left">Use Visual FoxPro to Send and Receive E-Mail and Faxes (Part
+                    Two)</span> <span class="right">January, 1997</span> </li>
+            <li> <span class="left">Use FoxPro to Send E-Mail Messages (Two Part Series, Cover
+                    Article)</span> <span class="right">December, 1997</span> </li>
+            <li> <span class="left">Get the Most Up-To-Date Data with DDE Advise</span> <span class="right">August,
+                    1996</span> </li>
+            <li> <span class="left">Run Applications by Remote Control</span> <span class="right">May, 1996</span> </li>
+        </ul>
+    </details>
+</div>
