--- a/_includes/resume/hobbies.html
+++ b/_includes/resume/hobbies.html
@@ -1,21 +1,23 @@
-<details id="hobbies"> <a name="interests"></a> <a name="hobbiesandinterests"></a>
-    <summary>Hobbies and Interests</summary>
-    <ul class="hobbies-list">
-        <li>Coding</li>
-        <li>Refactoring</li>
-        <li>Mentoring</li>
-        <li>Learning New Skills</li>
-        <li>Private Pilot</li>
-        <li>Football</li>
-        <li>Snow Skiing</li>
-        <li>Coaching Kid Sports</li>
-        <li>Poker</li>
-        <li>Musical Performing</li>
-        <li>Piano, Organ, Keyboards</li>
-        <li>Guitar</li>
-        <li>Harmonica</li>
-        <li>Banjo</li>
-        <li>Strength Training</li>
-        <li>Woodworking, Handyman</li>
-    </ul>
-</details>
+<div class="no-page-break">
+    <details id="hobbies"> <a name="interests"></a> <a name="hobbiesandinterests"></a>
+        <summary>Hobbies and Interests</summary>
+        <ul class="hobbies-list">
+            <li>Coding</li>
+            <li>Refactoring</li>
+            <li>Mentoring</li>
+            <li>Learning New Skills</li>
+            <li>Private Pilot</li>
+            <li>Football</li>
+            <li>Snow Skiing</li>
+            <li>Coaching Kid Sports</li>
+            <li>Poker</li>
+            <li>Musical Performing</li>
+            <li>Piano, Organ, Keyboards</li>
+            <li>Guitar</li>
+            <li>Harmonica</li>
+            <li>Banjo</li>
+            <li>Strength Training</li>
+            <li>Woodworking, Handyman</li>
+        </ul>
+    </details>
+</div>
