--- a/_includes/resume/patents.html
+++ b/_includes/resume/patents.html
@@ -1,8 +1,10 @@
-<details id="patents">
-    <summary>Patents</summary>
-    <ul class="two-column-list">
-        <li> <span class="left"> US Patent 7,233,957 B1<br> "Method and Apparatus for
-                identifying and Processing Changes to Management Information" </span> <span
-                class="right"> June, 2007 </span> </li>
-    </ul>
-</details>
+<div class="no-page-break">
+    <details id="patents">
+        <summary>Patents</summary>
+        <ul class="two-column-list">
+            <li> <span class="left"> US Patent 7,233,957 B1<br> "Method and Apparatus for
+                    identifying and Processing Changes to Management Information" </span> <span class="right"> June,
+                    2007 </span> </li>
+        </ul>
+    </details>
+</div>
