--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,17 +1,18 @@
 <details open> <a name="professional"></a>
     <summary id="professionalskills">Professional Skills</summary>
     <ul class="skills-list">
-        <li>C/C++ 2.0, Rust, Java</li>
-        <li>C#, .NET</li>
+        <li>C/C++ 2.0, Rust, Golang, Java</li>
+        <li>JavaScript and TypeScript</li>
+        <li>C#, .NET, .NET Core</li>
         <li>Windows and Linux Platforms</li>
         <li>Python, PowerShell, bash, Ruby</li>
         <li>Regular Expressions (RegEx)</li>
-        <li>Spring, Spring Boot</li>
-        <li>Rest, JPA, Hibernate</li>
+        <li>Spring, Spring Boot, JPA, Hibernate</li>
+        <li>REST APIs</li>
         <li>Agile/Scrum, Jira, Redmine</li>
         <li>SQL, NoSQL</li>
-        <li>HTML, CSS, Angular</li>
-        <li>AWS EC2, Azure Information Protection</li>
+        <li>HTML, CSS, Bootstrap, Angular, React</li>
+        <li>AWS, Azure</li>
         <li>Visual Studio, IntelliJ, Eclipse, Brackets, VS Code</li>
         <li>SQL Server, MySQL, SQLite, Sybase SQL Anywhere, LiteDB, MongoDB, DynamoDB </li>
         <li>Standard Template Library (STL)</li>
