Adding page break

--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -79,6 +79,10 @@ a:visited {
     page-break-after: always;
 }
 
+.no-page-break {
+    page-break-inside: avoid;
+}
+
 .headercontent>.address {
     text-align: center;
     font-size: small;
