About me stuff.

--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -43,6 +43,7 @@
         Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular Expressions, classic ASP,
         HTML/CSS, SQL and NoSQL databases, and cloud computing, to name a few. Currently, I am
         actively honing my skills in front-end web development using Java Spring, Spring Boot,
-        Angular, React.js, MVC, and LAMP stacks. I am also working towards attaining my AWS and
+        Angular, React, MVC, and LAMP stacks, in addition to getting familiar with Rust and
+        GoLang. I am also working towards attaining my AWS and
         Azure certifications, with future plans to delve into machine learning and AI. </p>
 </details>
