Altamira and skills update

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -26,6 +26,21 @@
                 Present
             </span>
         </li>
+
+        <li>
+            <span class="left">
+                Go: The Complete Developer's Guide (Golang)<br>
+                <a target="_blank" href="https://www.udemy.com/course/go-the-complete-developers-guide"
+                    class="link-with-indicator">
+                    udemy.com/course/go-the-complete-developers-guide
+                    <i class="fas fa-external-link-alt fa-xs"></i>
+                </a>
+            </span>
+            <span class="right">
+                October, 2023
+            </span>
+        </li>
+
         <li>
             <span class="left">
                 Working with React and Go (Golang)<br>
