--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -4,11 +4,11 @@
     </div>
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
-        <p>I would like to introduce myself. My name is Tom DeMay. I am a Software Engineer currently working
-            at Amazon AWS. I would like to tell you a little bit about me and why I feel I would be a great
-            addition to your company. </p>
-        <p>I have been a Software Engineer for nearly 30 years with a tremendously wide range of experiences;
-            as an individual contributor, technical lead, and management. Ultimately I am a hands on developer.
+        <p>I would like to introduce myself. My name is Tom DeMay. I am a Lead Senior Software Engineer
+            at Altamira Technologies Corporation working primarily in the national security space. I would like to tell
+            you a little bit about me and why I feel I would be a great addition to your company. </p>
+        <p>I have been a Software Engineer for over 30 years with a tremendously wide range of experiences;
+            as an individual contributor, technical lead, and management. Ultimately I am a hands on engineer.
             I am much more than just a coder. I am a problem solver. Bring whatever problem you have to me and
             I will own it from inception to completion. I will build the necessary tools, systems and teams and
             lead them to accomplish any goal.</p>
@@ -24,8 +24,8 @@
             self-taught musician having performed live for 11 years at a high level playing the piano, keyboards,
             guitar, harmonica, banjo and even singing. I am a self-taught software engineer. By my late 20s I had
             already been in engineering management, published by Advisor Publications and spoke on software
-            engineering principals at local user group meetings. When I was 30, I decided to get my computer science
-            degree. I completed 4 years of school in one year and maintained a GPA of 4.0. In 2003 I built
+            engineering principals at local user group meetings. When I was 30, I completed 4 years of school in one
+            year to get my Bachelors in Computer Science and maintained a GPA of 4.0. In 2003 I built
             <a href="https://www.discountcasinogear.com/">www.discountcasinogear.com</a> as an experiment to learn
             how to build web applications. It became one of the leading sites in its industry, consistently
             generating half a million in annual revenue until I sold it for a profit in 2011. The site is still
@@ -33,18 +33,16 @@
             have come and gone.
         </p>
         <p>I have a reputation for having high standards, writing well designed code that is maintainable and I
-            work well with others. I have bailed out number of failing projects, received numerous awards for doing
-            so and I hold a patent. I mentor and develop the skills of junior and struggling engineers. I enjoy
+            work well with others. I received numerous awards for bailing out a number of failing projects and I hold a
+            patent. I mentor and develop the skills of junior and struggling engineers. I enjoy
             refactoring code. In one case I improved performance by 3,951%. In that particular case, code that
             initially took 6 hours to run before it failed, consuming all the computer's resources and crashing,
             was refactored to complete in 6 minutes using only 40MB of memory. </p>
-        <p>As you can see, I am an aggressive learner and have a passion for continued education. I have taught
-            myself C/C++, .NET, C#, Windows and Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular
-            Expressions, classic ASP, HTML/CSS, Website development, SQL and NoSQL, various back end databases,
-            and cloud computing just to name a few. I am currently working on mastering front-end web development
-            using Java Spring, Spring Boot, Angular, React.js, MVC and LAMP stacks in addition with getting
-            familiar with Rust and GoLang. I am currently working towards my AWS and
-            Azure certifications, then I plan to move on to machine learning and AI.</p>
+        <p>As you can see, I am an aggressive learner and have a passion for continued education. Rust, GoLang, C/C++,
+            C# .NET, Java, Python, Website development, SQL and NoSQL, various back end databases, and
+            cloud computing are just a few of the tech stacks I have taught myself. I am currently working on mastering
+            front-end web development with Java, Spring Boot, Angular, and React.js and currently working towards my
+            AWS and Azure certifications</p>
         <p>As you can tell I am very proud of my history and accomplishments. I am excited to share with you my
             many success stories and even some not so successful stories that became learning opportunities for
             me. I honestly believe I can fit in well in any organization in a variety of different roles due to
