--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,28 +1,21 @@
 <details open> <a name="professional"></a>
     <summary id="professionalskills">Professional Skills</summary>
     <ul class="skills-list">
-        <li>C/C++ 2.0, Rust, Golang, Java</li>
+        <li>C/C++ 2.0, Rust, Golang</li>
+        <li>AWS, Azure</li>
+        <li>Python, PowerShell, bash, Ruby</li>
+        <li>SQL, NoSQL</li>
+        <li>Java, Spring, Spring Boot</li>
         <li>JavaScript and TypeScript</li>
+        <li>HTML, CSS, Angular, React</li>
         <li>C#, .NET, .NET Core</li>
         <li>Windows and Linux Platforms</li>
-        <li>Python, PowerShell, bash, Ruby</li>
         <li>Regular Expressions (RegEx)</li>
-        <li>Spring, Spring Boot, JPA, Hibernate</li>
-        <li>REST APIs</li>
-        <li>Agile/Scrum, Jira, Redmine</li>
-        <li>SQL, NoSQL</li>
-        <li>HTML, CSS, Bootstrap, Angular, React</li>
-        <li>AWS, Azure</li>
-        <li>Visual Studio, IntelliJ, Eclipse, Brackets, VS Code</li>
-        <li>SQL Server, MySQL, SQLite, Sybase SQL Anywhere, LiteDB, MongoDB, DynamoDB </li>
-        <li>Standard Template Library (STL)</li>
+        <li>SQL Server, MySQL, SQLite, MongoDB, DynamoDB</li>
         <li>Classic ASP</li>
         <li>Visual Studio Tools for Office (VSTO), OpenXML SDK</li>
         <li>Windows Desktop Applications, Windows NT Services, Backend Services</li>
-        <li>Microsoft Detours/Windows Hooking</li>
         <li>Digital Rights Management (DRM/ADRMS)</li>
-        <li>SVN, ClearCase, git, BitBucket</li>
-        <li>CruiseControl.NET, Jenkins</li>
         <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
         <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
         <li>Jekyll, Liquid, Selenium</li>
