--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -15,12 +15,12 @@
         <br><br>
         <h3>Top Skills:</h3>
         <ul>
-            <li><a href="#professionalskills">C/C++ 2.0, Rust<br>(C/C++ since mid 90s)</a></li>
+            <li><a href="#professionalskills">C/C++<br>(since mid 90s)</a></li>
+            <li><a href="#professionalskills">GoLang, Rust (since 2020s)</a></li>
             <li><a href="#professionalskills">C# (since early 2000s)</a></li>
             <li><a href="#professionalskills">Python (since mid 2010s)</a></li>
             <li><a href="#professionalskills">Java (since late 2000s)</a></li>
             <li><a href="#professionalskills">AWS (since 2018)</a></li>
-            <li><a href="#professionalskills">bash (since late 90s)</a></li>
             <li><a href="#professionalskills">PowerShell<br>(since early 2010s)</a></li>
             <li><a href="#professionalskills">Ruby (since 2019)</a></li>
             <li><a href="#professionalskills">HTML (since late 90s)</a></li>
