Really, I don't have my Bachelors on here?

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -93,7 +93,7 @@
         </li>
         <li>
             <span class="left">
-                Strayer University<br>
+                Strayer University - Bachelors in Computer Science<br>
                 <i>Completed 4 years of college in one year by teaching myself the material and testing out of
                     classes.</i><br>
                 Summa Cum Laude (4.0 GPA)<br>
