--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -12,20 +12,24 @@
 
     <ul class="projects-list">
         <li>Within my first three weeks, I took the initiative to establish the testing, building, staging, and
-            orchestration infrastructure for a containerized Rust service. The service uses a consensus algorithm to
-            maintain a network of server nodes that will identify and track threats to national security. In addition I
-            introduced workflows to aid in development and debugging, and improved the CI pipeline.
+            orchestration infrastructure for a containerized <strong>Rust</strong> service with <strong>Docker</strong>.
+            The service uses a <strong>consensus algorithm</strong> to task a network of server nodes that will
+            identify and track threats to <strong>National Security</strong>. In addition I introduced workflows to aid
+            in development and debugging, and improved the CI pipeline.
         </li>
         <li>
-            Tasked with overseeing a full-stack application with Vue.js on the frontend and series of microservices in
-            Java on the backend. The priority is to trackdown the root cause of existing performance problems in the
-            backend microservices and mentoring junior developers in a refactoring effort to improve performance.
+            Tasked with overseeing a full-stack application with <strong>Vue.js</strong> on the frontend and series of
+            microservices in <strong>Java</strong> on the backend. The priority is to trackdown the root cause of
+            existing performance problems in the backend microservices and mentoring junior developers in a refactoring
+            effort to improve performance.
         </li>
         <li>
             The expectation once I am fully onboarded is to oversea engineering efforts for a variety of projects which
-            include cloud-based solutions using React on the front end and GoLang on the back end and other projects
-            with tech stacks that include Java and Spring Boot, Kubernetes, Amazon Web Services (AWS), CloudFront,
-            CloudWatch, Cognito, and Lambda Microservices.
+            include cloud-based solutions using <strong>React</strong> on the front end and <strong>GoLang</strong> on
+            the back end and other projects with tech stacks that include <strong>Java</strong> and <strong>Spring
+                Boot</strong>, <strong>Kubernetes</strong>, <strong>Amazon Web Services (AWS)</strong>,
+            <strong>CloudFront</strong>, <strong>CloudWatch</strong>, <strong>Cognito</strong>, and <strong>Lambda
+                Microservices</strong>.
         </li>
     </ul>
 </details>
