Update to Job title at altamira and update on cloud computing course

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -6,9 +6,9 @@
                 Post Graduate Program in Cloud Computing<br>
                 University of Texas at Austin<br>
                 Texas McCombs School of Business<br>
-                Currently enrolled to fill in the few remaining gaps in my existing AWS knowledge.<br>
-                The expectation is to obtain <strong>AWS</strong> and <strong>Azure certifications</strong> and get
-                exposure to other cloud providers such as <strong>Google and IBM</strong>.<br>
+                Post Graduate course to prepare students to get their <strong>AWS</strong> and
+                <strong>Azure certifications</strong> and expose them to other cloud providers
+                such as <strong>Google and IBM</strong>.<br>
                 4.2 GPA
             </span>
             <span class="right">March 2023 - October 2023</span>
