--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -1,7 +1,7 @@
 <details>
     <summary id="altamira"> <span class="left"><strong>Altamira Technologies Coproration</strong></span>
         <span class="right">McLean, Virginia</span><br>October 2023 - Present<br>
-        <i>Lead Senior Software Engineer IV</i>
+        <i>SWEIV - Manager, Senior Software Engineer Lead</i>
     </summary>
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence and homeland security
