setup a dev container to manage the site and updated my about me page

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -3,10 +3,10 @@
     <ul class="skills-list">
         <li>C/C++ 2.0, Rust, Golang</li>
         <li>AWS, Azure</li>
-        <li>Python, PowerShell, bash, Ruby</li>
+        <li>Python, PowerShell, bash</li>
         <li>SQL, NoSQL</li>
-        <li>Java, Spring, Spring Boot</li>
-        <li>JavaScript and TypeScript</li>
+        <li>Java, Spring & Spring Boot</li>
+        <li>TypeScript and JavaScript</li>
         <li>HTML, CSS, Angular, React</li>
         <li>C#, .NET, .NET Core</li>
         <li>Windows and Linux Platforms</li>
@@ -18,6 +18,5 @@
         <li>Digital Rights Management (DRM/ADRMS)</li>
         <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
         <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
-        <li>Jekyll, Liquid, Selenium</li>
     </ul>
 </details>
