--- a/_includes/aboutme/headline.html
+++ b/_includes/aboutme/headline.html
@@ -1,6 +1,8 @@
 <div id="aboutme" class="shadowbox">
     <h1>About Me</h1>
-    <p> Allow me to introduce myself. My name is Tom DeMay, and I am a Senior Software Engineer
-        currently employed at Amazon AWS. I would like to share a bit about my background and
-        explain why I believe I would be a valuable addition to any organization. </p>
+    <p> Allow me to introduce myself. My name is Tom DeMay, and I am a Software Engineer Technical Lead and Engineering
+        Manager at Altamira Technologies Corp doing what my part to advance critical National Security missions and
+        protect our nation. I would like to share a bit about my background and explain why I believe I would be a
+        valuable addition to any
+        organization. </p>
 </div>
