--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -42,8 +42,9 @@
         I have taught myself a multitude of technologies, including C/C++, .NET, C#, Windows and
         Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular Expressions, classic ASP,
         HTML/CSS, SQL and NoSQL databases, and cloud computing, to name a few. Currently, I am
-        actively honing my skills in front-end web development using Java Spring, Spring Boot,
-        Angular, React, MVC, and LAMP stacks, in addition to getting familiar with Rust and
-        GoLang. I am also working towards attaining my AWS and
-        Azure certifications, with future plans to delve into machine learning and AI. </p>
+        actively honing my skills in Typescript, Java Spring, GoLang and Rust. I completed a post graduate program in
+        Cloud Computing from the University of Texas, earning a 4.3 GPA. I am also in the process of obtaining several
+        Amazon AWS and Microsoft Azure certifications, with future plans to delve into machine learning and AI. I am in
+        the process of obtaining my National Security clearance.</p>
+    </p>
 </details>
