update readme and change skills on left pane

--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -23,7 +23,7 @@
             <li><a href="#professionalskills">AWS (since 2018)</a></li>
             <li><a href="#professionalskills">PowerShell<br>(since early 2010s)</a></li>
             <li><a href="#professionalskills">Ruby (since 2019)</a></li>
-            <li><a href="#professionalskills">TypeScript (since early 2020s)</a></li>
+            <li><a href="#professionalskills">TypeScript (since late 2019s)</a></li>
             <li><a href="#professionalskills">HTML (since late 90s)</a></li>
             <li><a href="#professionalskills">SQL (since mid 90s)</a></li>
         </ul>
