file attributes changed when I put this on one drive.

--- a/_includes/aboutme/headline.html
+++ b/_includes/aboutme/headline.html
@@ -1,7 +1,7 @@
 <div id="aboutme" class="shadowbox">
     <h1>About Me</h1>
     <p> Allow me to introduce myself. My name is Tom DeMay, and I am a Software Engineer Technical Lead and Engineering
-        Manager at Altamira Technologies Corp doing what my part to advance critical National Security missions and
+        Manager at Altamira Technologies Corp doing my part to advance critical National Security missions and
         protect our nation. I would like to share a bit about my background and explain why I believe I would be a
         valuable addition to any
         organization. </p>
